--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -106,7 +106,7 @@
     "prop-types": "15.7.2",
     "react-is": "16.13.1",
     "react-refresh": "0.8.3",
-    "resolve-url-loader": "3.1.1",
+    "resolve-url-loader": "https://github.com/Informed/resolve-url-loader.git#5f6ecdaa12156afa99b9f6af8863fa5375f26999",
     "sass-loader": "10.0.2",
     "schema-utils": "2.7.1",
     "stream-browserify": "3.0.0",
